# .Algorithms

./: .gitignore  CMakeLists.txt  README.md
.github/config/: current_focus.json
.github/scripts/: current_focus.json  update_readme.py
.github/workflows/: update-readme.yml
BaaarkingDog/: .gitignore  workbook.md
BaaarkingDog/0x03/: 10808_1.cpp  10808_1.h  array_test.cpp
BaaarkingDog/0x04/: 1406_1.cpp  1406_2.cpp
BaaarkingDog/0x12/solutions/: 1256.cpp
BaaarkingDog/docs/: how-to-ask.md  solution-request.md
BaaarkingDog/workbook/: links.txt  problems.txt
Solutions/Algos/1.Array/: 10808_1.cpp  array_test.cpp  array_test_ans.cpp
Solutions/Algos/4.Queue/: queue_test.cpp
Solutions/Algos/_Tests/ArrayTest/: array_test.cpp
Solutions/Algos/_Tests/StackTest/: stack_test.cpp
Solutions/Baekjoon/: 1000.cpp  1001.cpp  test.cpp
Solutions/Baekjoon/10828/: 10828.cpp
Solutions/Baekjoon/10845/: 10845.cpp
Solutions/Baekjoon/10866/: 10866.cpp
Solutions/Baekjoon/12865/: 12865.cpp  12865_Solution.cpp
Solutions/Baekjoon/1406/: 1406.cpp  1406_Solution.cpp
Solutions/Baekjoon/1697/: 1697.cpp
Solutions/Baekjoon/1874/: 1874.cpp
Solutions/Baekjoon/4949/: 4949.cpp
Solutions/DataStructures/2.Linked List/: 1406_2.cpp  linked_list_test.cpp  linked_list_test_ans.cpp
Solutions/DataStructures/3.Stack/: stack_test.cpp
Solutions/DataStructures/5.Deque/: deque_test.cpp
Solutions/DataStructures/Array/: 10808_2.cpp
Solutions/DataStructures/Linked List/: 1406_1.cpp  list_example.cpp
Solutions/DataStructures/_Tests/DequeTest/: deque_test.cpp
